--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "npx tsx watch src/server.ts",
+    "lint": "eslint src --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^20.1.5",
+    "eslint": "^8.40.0",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4"
   },
